--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         retrofit_version = "2.9.0"
         kotlin_version = "1.3.72"
         moshi_version = "1.10.0"
+        lifecycle_version = "2.2.0"
     }
     repositories {
         google()
