--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        def nav_version1 = "2.3.0-rc01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version1"
     }
 }
 
