--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     //navigation
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "androidx.fragment:fragment-ktx:1.2.2"
+
+    //glide library
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
