--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         kotlin_version = "1.3.72"
         moshi_version = "1.10.0"
         lifecycle_version = "2.2.0"
+        room_version = "2.2.5"
     }
     repositories {
         google()
