--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.SubmissionActivity"
-            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".ui.activities.WelcomeSplashScreenActivity"></activity>
+        <activity
+            android:name=".ui.activities.SubmissionActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.activities.HomepageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
