Added the welcome splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.WelcomeSplashScreenActivity"></activity>
-        <activity
-            android:name=".ui.activities.SubmissionActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ui.activities.HomepageActivity">
+        <activity android:name=".ui.activities.WelcomeSplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activities.SubmissionActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".ui.activities.HomepageActivity">
+       <!--     <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
         </activity>
 
         <meta-data
