--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.prosperekwerike.gadsleaderboard">
+    package="com.prosperekwerike.gadsleaderboardren">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.WelcomeSplashScreenActivity">
+        <activity android:name="com.prosperekwerike.gadsleaderboardren.ui.activities.WelcomeSplashScreenActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,14 +20,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.SubmissionActivity"
+            android:name="com.prosperekwerike.gadsleaderboardren.ui.activities.SubmissionActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ui.activities.HomepageActivity">
-       <!--     <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name="com.prosperekwerike.gadsleaderboardren.ui.activities.HomepageActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
         </activity>
 
         <meta-data
